--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,312 @@
 <div class="min-w-screen 
   min-h-screen
-  bg-teal-900
+  bg-pink-900
   flex
   items-center
   justify-center
   px-5
-  py-5"></div>
+  py-5">
+<div class="w-full
+mx-auto
+rounded-xl
+shadow-xl
+text-gray-800
+relative
+overflow-hidden"
+style="max-width: 350px">
+
+<h1 class="text-center text-white py-10 text-4xl font-bold">Calculator</h1>
+
+ <!--screen design-->
+
+ <div class="w-full
+  h-40
+  bg-pink-800
+   text-right">
+
+   <!--function-->
+
+   <div class="w-full
+   py-5
+   px-6
+   text-3xl
+   text-white
+   font-thin">
+    {{functionT}}
+   </div>
+
+   <!--number screen-->
+   <div class="w-full
+   py-5
+   py-6
+   text-6xl
+   text-white
+   font-thin">
+   {{calValue | number}}
+   </div>
+</div>
+
+<!--buttons-->
+<div class="w-full
+bg-pink-900">
+
+</div >
+  <!--first row-->
+<div class="flex w-full">
+  <!--clear-->
+  <div class="w-2/4 border-r border-b border-fuchsia-400">
+      <button class="w-full
+      h-16
+      outline-none
+      hover:bg-pink-400 hover:bg-opacity-20
+      text-white
+      text-xl
+      front-light"
+      (click)="onClickValue('c', 'function')">C</button>
+  </div>
+  <!--end clear-->
+  <!--percent-->
+  <div class="w-1/4 border-r border-b border-fuchsia-400">
+    <button class="w-full
+      h-16
+      outline-none
+      hover:bg-pink-400 hover:bg-opacity-20
+      text-white
+      text-opacity-50
+      text-xl
+      font-light"
+      (click)="onClickValue('%', 'function')">%
+  </button>
+  </div>
+<!--end percent-->
+<!--multiply-->
+    <div class="w-1/4 border-r border-b border-fuchsia-400">
+      <button class="w-full
+      h-16
+      focus:outline-none
+      outline-none
+      bg-pink-950
+      text-white
+      hover:bg-pink-400 hover:bg-opacity-20
+      bg-opacity-10
+      text-2xl
+      font-light"
+      (click)="onClickValue('/', 'function')">/
+  </button>
+    </div>
+    </div>
+    <!--end of first row-->
+    <!--second row-->
+  <div class="flex w-full">
+  <!--1-7-->
+  <div class="w-1/4 border-r border-b border-fuchsia-400" >
+    <button class="w-full
+      h-16
+      focus:outline-none
+      outline-none
+      bg-pink-950
+      text-white
+      hover:bg-pink-400 hover:bg-opacity-20
+      bg-opacity-10
+      text-xl
+      font-light"
+      (click)="onClickValue('7', 'number')"> 7 </button>
+    </div>
+    <div class="w-1/4 border-r border-b border-fuchsia-400" >
+      <button class="w-full
+        h-16
+        focus:outline-none
+        outline-none
+        bg-pink-950
+        text-white
+        hover:bg-pink-400 hover:bg-opacity-20
+        bg-opacity-10
+        text-xl
+        font-light"
+        > 8 </button>
+      </div>
+      <div class="w-1/4 border-r border-b border-fuchsia-400" >
+        <button class="w-full
+          h-16
+          focus:outline-none
+          outline-none
+          bg-pink-950
+          text-white
+          hover:bg-pink-400 hover:bg-opacity-20
+          bg-opacity-10
+          text-xl
+          font-light"
+          > 9 </button>
+        </div>
+        <div class="w-1/4 border-r border-b border-fuchsia-400" >
+          <button class="w-full
+            h-16
+            focus:outline-none
+            outline-none
+            bg-pink-950
+            text-white
+            hover:bg-pink-400 hover:bg-opacity-20
+            bg-opacity-10
+            text-xl
+            font-light"
+            > x </button>
+          </div>
+  </div>
+  <!--end second row-->
+<!--third row-->
+<div class="flex w-full">
+  <!--4-6-->
+  <div class="w-1/4 border-r border-b border-fuchsia-400" >
+    <button class="w-full
+      h-16
+      focus:outline-none
+      outline-none
+      bg-pink-950
+      text-white
+      hover:bg-pink-400 hover:bg-opacity-20
+      bg-opacity-10
+      text-xl
+      font-light"
+      > 4 </button>
+    </div>
+    <div class="w-1/4 border-r border-b border-fuchsia-400" >
+      <button class="w-full
+        h-16
+        focus:outline-none
+        outline-none
+        bg-pink-950
+        text-white
+        hover:bg-pink-400 hover:bg-opacity-20
+        bg-opacity-10
+        text-xl
+        font-light"
+        > 5 </button>
+      </div>
+      <div class="w-1/4 border-r border-b border-fuchsia-400" >
+        <button class="w-full
+          h-16
+          focus:outline-none
+          outline-none
+          bg-pink-950
+          text-white
+          hover:bg-pink-400 hover:bg-opacity-20
+          bg-opacity-10
+          text-xl
+          font-light"
+          > 6 </button>
+        </div>
+        <!--minus sign-->
+        <div class="w-1/4 border-r border-b border-fuchsia-400" >
+          <button class="w-full
+            h-16
+            focus:outline-none
+            outline-none
+            bg-pink-950
+            text-white
+            hover:bg-pink-400 hover:bg-opacity-20
+            bg-opacity-10
+            text-xl
+            font-light"
+            > - </button>
+          </div>
+  </div>
+<!--end third row-->
+<!--fourth row-->
+<div class="flex w-full">
+  <!--1-7-->
+  <div class="w-1/4 border-r border-b border-fuchsia-400" >
+    <button class="w-full
+      h-16
+      focus:outline-none
+      outline-none
+      bg-pink-950
+      text-white
+      hover:bg-pink-400 hover:bg-opacity-20
+      bg-opacity-10
+      text-xl
+      font-light"
+      > 1 </button>
+    </div>
+    <div class="w-1/4 border-r border-b border-fuchsia-400" >
+      <button class="w-full
+        h-16
+        focus:outline-none
+        outline-none
+        bg-pink-950
+        text-white
+        hover:bg-pink-400 hover:bg-opacity-20
+        bg-opacity-10
+        text-xl
+        font-light"
+        > 2 </button>
+      </div>
+      <div class="w-1/4 border-r border-b border-fuchsia-400" >
+        <button class="w-full
+          h-16
+          focus:outline-none
+          outline-none
+          bg-pink-950
+          text-white
+          hover:bg-pink-400 hover:bg-opacity-20
+          bg-opacity-10
+          text-xl
+          font-light"
+          > 3 </button>
+        </div>
+        <div class="w-1/4 border-r border-b border-fuchsia-400" >
+          <button class="w-full
+            h-16
+            focus:outline-none
+            outline-none
+            bg-pink-950
+            text-white
+            hover:bg-pink-400 hover:bg-opacity-20
+            bg-opacity-10
+            text-xl
+            font-light"
+            > + </button>
+          </div>
+  </div>
+  <!--end fouth row-->
+  <!--fifth row-->
+  <div class="flex w-full">
+    <!--0 button-->
+    <div class="w-1/4 border r border-fuchsia-400">
+      
+      <button class="w-full
+      h-16
+      outline-non
+      hover:bg-pink-400 hover:bg-opacity-20
+      text-white
+      text-xl
+      font-light">0</button>
+    </div>
+    <!--decimal button-->
+    <div class="w-1/4 border r border-fuchsia-400">
+      
+      <button class="w-full
+      h-16
+      outline-non
+      hover:bg-pink-400 hover:bg-opacity-20
+      text-white
+      text-xl
+      font-light">.</button>
+    </div>
+    <!--Equal button-->
+    <div class="w-2/4 border r border-fuchsia-400">
+      
+      <button class="w-full
+      h-16
+      outline-non
+      hover:bg-pink-400 hover:bg-opacity-20
+      text-white
+      text-xl
+      font-light">=</button>
+    </div>
+  </div>
+  <!--end fifth button
+  </div>
+<!--end of buttons-->
+</div>
+  
+
